--- a/index (2).html
+++ b/index (2).html
@@ -41,7 +41,7 @@
   <div class="container-fluid">
     <div class="navbar-header">
       <a style="background-color: #4484CE; color: white;" class="navbar-brand" href="#">
-        <img alt="GOOGLE and WEATHER" src="...">
+        <h5>GOOGLE and WEATHER"</h5>
       </a>
     </div>
   </div>
