--- a/index.html
+++ b/index.html
@@ -54,9 +54,9 @@
           <input type="text" class="form-control" placeholder="Search">
       <label for="search">Destination</label>
           <input type="text" class="form-control" placeholder="Search">
-      <label for="search">Time (MM/DD/YY) </label>
+      <label for="search">Hi HI HI Hi </label>
           <input type="text" class="form-control" placeholder="Search">
-      <label for="search">WHATEVER</label>
+      <label for="search">HI HI hi HI</label>
           <input type="text" class="form-control" placeholder="Search">
         <br>
       <button id="destinationButton" class="dates" style="padding:10px"> Tell me! </button>
@@ -172,6 +172,8 @@
   </body>
 </html>
     
+
+    <div> HI Hi HIHHIHIIH </div>
   </body>
 </html>
 
