--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 </nav>
 
 <body>
-  <div class="container col-md-2" style="float:left">
+  <div class="form-inline">
     <div class="form-group">
       <label for="search">Start</label>
           <input id="startInput" type="text" class="form-control" placeholder="Search">
@@ -62,8 +62,6 @@
 
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBPohRT1xe96u7JVPsKDHGNMi4gRWj4AAw&libraries=places&callback=initMap"
     async defer></script>
-    <script type="text/javascript" src="assets/javascript/app.js">
-
-    </script>
+    <script type="text/javascript" src="assets/javascript/app.js"></script>
   </body>
 </html>
