--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Place Autocomplete</title>
+    <title>Project 1</title>
     <meta name="viewport" content="initial-scale=1.0, user-scalable=no">
     <link rel="stylesheet" href="assets/style/style.css">
     <meta charset="utf-8">
@@ -13,10 +13,10 @@
 
 <script src="https://www.gstatic.com/firebasejs/4.4.0/firebase.js"></script>
 
-<nav style="background-color: #4484CE" class="navbar navbar-default">
+<nav class="navbar navbar-default">
   <div class="container-fluid">
     <div class="navbar-header">
-      <a style="background-color: #4484CE; color: white;" class="navbar-brand" href="#">
+      <a class="navbar-brand">
         <h5> GOOGLE and WEATHER </h5>
       </a>
     </div>
@@ -24,22 +24,14 @@
 </nav>
 
 <body>
-  <div class="form-inline">
-    <div class="form-group">
-      <label for="search">Start</label>
-          <input id="startInput" type="text" class="form-control" placeholder="Search">
-      <label for="search">Destination</label>
-          <input id="destinationInput"type="text" class="form-control" placeholder="Search">
-    </div>
-    <button id="destinationButton" class="dates btn"> Tell me! </button>
-  </div>
 
+  <div class="inputContainer">
 
     <input id="origin-input" class="controls" type="text"
-        placeholder="Enter an origin location">
+        placeholder="Origin location">
 
     <input id="destination-input" class="controls" type="text"
-        placeholder="Enter a destination location">
+        placeholder="Destination location">
 
     <div id="mode-selector" class="controls">
       <input type="radio" name="type" id="changemode-walking" checked="checked">
@@ -51,8 +43,23 @@
       <input type="radio" name="type" id="changemode-driving">
       <label for="changemode-driving">Driving</label>
     </div>
+    </div>
 
+
+    <!-- <div class="mapWrapper">
+      <div class="form">
+        <div class="form-group">
+          <label class="startText" for="search">Start</label>
+          <input id="startInput" type="text" class="form-control" placeholder="Search">
+          <label class="destinationText" for="search">Destination</label>
+          <input id="destinationInput"type="text" class="form-control destinationInput" placeholder="Search">
+        </div>
+        <button id="destinationButton" class="dates btn"> Tell me! </button>
+      </div>
+    </div> -->
     <div id="map"></div>
+
+
 
     <!-- <input type="text" name="Hello" id="city" placeholder="city here">
     <input type="text" name="Hello" id="timestamp" placeholder="timestamp here">
