--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <h5>COMMUTE ADVISOR</h5>
 
       </a>
-      <img src="assets/images/sun.png" alt="cute emoji">
+      <img class="logo " src="assets/images/sun.png" alt="cute emoji">
     </div>
   </div>
 </nav>
@@ -59,6 +59,8 @@
         <button id="destinationButton" class="dates btn"> Tell me! </button>
       </div> -->
       <div id="infoBox">
+
+        stuff and some stuff with things
         <div class="">
 
         </div>
