main Ui complete working on transition animations

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <div class="container-fluid">
     <div class="navbar-header">
       <a class="navbar-brand">
-        <h5>COMMUTE ADVISOR</h5>
+        <h3>COMMUTE ADVISOR</h3>
 
       </a>
       <img class="logo " src="assets/images/sun.png" alt="cute emoji">
@@ -59,8 +59,7 @@
         <button id="destinationButton" class="dates btn"> Tell me! </button>
       </div> -->
       <div id="infoBox">
-
-        stuff and some stuff with things
+        Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut <button id="close">open/close</button>
         <div class="">
 
         </div>
