--- a/login.html
+++ b/login.html
@@ -26,7 +26,7 @@
 	          <input id="icon_email" type="email" class="validate">
 	          <label for="icon_email">Email</label>
 	        </div>
-	        <button class="btn waves-effect waves-light" type="submit" name="action">Submit
+	        <button class="btn waves-effect waves-light" type="submit" name="action" formaction="./index.html">Submit
 		    <i class="material-icons right">send</i>
 		  </button>
 	      </div>
@@ -34,6 +34,12 @@
 	  </div>
 
 	  <img class ="backgroundpic" src="assets/images/loginmaps.jpg" alt="login maps"></div>
+
+	  <script type = "text/javascript">
+
+	  	<button type="submit" formaction="URL">
+
+	  </script>
         
 	
       <!--Import jQuery before materialize.js-->
