--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
     </div>
 
 
-    <div class="mapWrapper">
+    <div class="mapWrapper transform">
       <!-- <div class="form">
         <div class="form-group">
           <label class="startText" for="search">Start</label>
@@ -59,11 +59,10 @@
         </div>
         <button id="destinationButton" class="dates btn"> Tell me! </button>
       </div> -->
-      <div id="infoBox">
-        Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut <button id="close">open/close</button>
-        <div class="">
+      <div class="infoBox transform">
 
-        </div>
+        <button id="close">open/close</button>
+        Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut
       </div>
     </div>
     <div id="map"></div>
