--- a/index.html
+++ b/index.html
@@ -30,13 +30,13 @@
 
   <div class="inputContainer">
 
-    <input id="origin-input" class="controls" type="text"
+    <input id="origin-input" class="controls transform" type="text"
         placeholder="Origin location">
 
-    <input id="destination-input" class="controls" type="text"
+    <input id="destination-input" class="controls transform" type="text"
         placeholder="Destination location">
 
-    <div id="mode-selector" class="controls">
+    <div id="mode-selector" class="controls transform">
       <input type="radio" name="type" id="changemode-walking" checked="checked">
       <label for="changemode-walking">Walking</label>
 
