--- a/index.html
+++ b/index.html
@@ -82,6 +82,6 @@
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBPohRT1xe96u7JVPsKDHGNMi4gRWj4AAw&libraries=geometry">
 </script>
 
-    <script type="text/javascript" src="assets/javascript/app.js"></script>
+    <script type="text/javascript" src="assets/javascript/app2.js"></script>
   </body>
 </html>
