--- a/login.html
+++ b/login.html
@@ -33,7 +33,7 @@
 	    </form>
 	  </div>
 
-	  <img class ="backgroundpic" src="assets/images/loginmaps.jpg" alt="login maps"></div>
+	  <img class ="backgroundpic" src="assets/images/cuteloginmaps.jpg" alt="login maps"></div>
 
 	  <script type = "text/javascript">
 
@@ -41,10 +41,6 @@
 
 	  </script>
         
-	
-      <!--Import jQuery before materialize.js-->
-      <script type="text/javascript" src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
-      <script type="text/javascript" src="js/materialize.min.js"></script>
     </body>
   </html>
         
