--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <a class="navbar-brand">
           <h3>COMMUTE ADVISOR</h3>
         </a>
-        <img class="logo" src = "assets/images/sun.png" alt="cute emoji">
+        <img class="logo" src = "assets/images/Partly Cloudy.png" alt="cute emoji">
       </div>
     </div>
   </nav>
@@ -61,7 +61,7 @@
       <div class="infoBox transform">
         <button id="close">Information</button>
         <div class="destinationInfo"></div>
-        
+
       </div>
       <div id="modal1" class="modal">
         <div class="modal-content">
@@ -77,8 +77,9 @@
                   <input id="icon_email" type="email" class="validate">
                   <label class="formLabel" for="icon_email">Email</label>
                 </div>
-                <button class="btn waves-effect waves-light" type="submit" name="action" formaction="./index.html">Submit
+                <button class=" modalSubmit btn waves-effect waves-light" type="submit" name="action" formaction="./index.html">Submit
                 </button>
+                <a class="modal-action modal-close waves-effect waves-green btn-flat ">Close</a>
               </div>
             </div>
           </div>
